--- a/FreeFlix/anime/index.html
+++ b/FreeFlix/anime/index.html
@@ -27,8 +27,12 @@
     <link rel="canonical" href="https://freeflixx.pages.dev/anime/">
 
     <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../custom-buttons.css">
+    <link rel="stylesheet" href="section-fix.css">
     <link rel="icon" href="../assets/freeflixx.ico">
     <title>FreeFlixx - Stream Anime For Free</title>
+    <link rel="stylesheet" href="../custom-buttons.css">
+    <link rel="stylesheet" href="section-fix.css">
 </head>
 
 <body>
@@ -180,6 +184,7 @@
     </button>
 
     <!-- Load script at the end for better performance -->
+    <script src="../navigation-fix.js?v=1.0.1"></script>
     <script src="anime.js"></script>
 </body>
 
