--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -453,6 +453,7 @@
 
     <!-- Load script at the end for better performance -->
     <script src="./custom-navigation.js?v=1.0.1"></script>
+    <script src="./navigation-fix.js?v=1.0.1"></script>
     <script src="./index.js?v=1.0.1"></script>
 
     <script>
@@ -495,6 +496,7 @@
         // Refresh button has been removed as requested
     })();
     </script>
+    <script src="navigation-fix.js"></script>
 </body>
 
 </html>
