--- a/FreeFlix/movies/index.html
+++ b/FreeFlix/movies/index.html
@@ -27,6 +27,8 @@
     <link rel="canonical" href="https://freeflixx.pages.dev/movies/">
 
     <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../custom-buttons.css">
+    <link rel="stylesheet" href="section-fix.css">
     <link rel="icon" href="../assets/freeflixx.ico">
     <title>FreeFlixx - Stream Movies For Free</title>
 </head>
@@ -199,6 +201,7 @@
     </button>
 
     <!-- Load script at the end for better performance -->
+    <script src="../navigation-fix.js?v=1.0.1"></script>
     <script src="movies.js"></script>
 </body>
 
