--- a/FreeFlix/tvshows/index.html
+++ b/FreeFlix/tvshows/index.html
@@ -27,6 +27,8 @@
     <link rel="canonical" href="https://freeflixx.pages.dev/tvshows/">
 
     <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../custom-buttons.css">
+    <link rel="stylesheet" href="section-fix.css">
     <link rel="icon" href="../assets/freeflixx.ico">
     <title>FreeFlixx - Stream TV Shows For Free</title>
 </head>
@@ -203,6 +205,7 @@
     </button>
 
     <!-- Load script at the end for better performance -->
+    <script src="../navigation-fix.js?v=1.0.1"></script>
     <script src="tvshows.js"></script>
 </body>
 
