--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -599,10 +599,10 @@
     <footer style="background-color: rgba(0,0,0,0.8); padding: 20px; text-align: center; color: #666; font-size: 0.8rem; margin-top: 50px;">
         <div class="seo-content">
             <h2>FreeFlix - The #1 Free Movie Streaming Platform</h2>
-            <p>Welcome to FreeFlixx, your ultimate destination for free movie streaming online. We offer thousands of movies, TV shows, and anime series that you can watch without any subscription, signup, or hidden fees.</p>
+            <p>Welcome to FreeFlix, your ultimate destination for free movie streaming online. We offer thousands of movies, TV shows, and anime series that you can watch without any subscription, signup, or hidden fees.</p>
             <p>Our extensive library includes the latest blockbusters, classic films, trending TV series, popular anime, and exclusive content - all available to stream in HD quality on any device.</p>
-            <p>Browse through our curated categories, including action, comedy, horror, thriller, drama, romance, fantasy, mystery, and more. Whether you're looking for Netflix originals, Disney+ exclusives, or trending new releases, FreeFlixx has it all.</p>
-            <p>Start streaming now for free and discover why millions of users choose FreeFlixx as their go-to platform for entertainment.</p>
+            <p>Browse through our curated categories, including action, comedy, horror, thriller, drama, romance, fantasy, mystery, and more. Whether you're looking for Netflix originals, Disney+ exclusives, or trending new releases, FreeFlix has it all.</p>
+            <p>Start streaming now for free and discover why millions of users choose FreeFlix as their go-to platform for entertainment.</p>
             <div class="footer-links">
                 <a href="index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Home</a>
                 <a href="movies/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Movies</a>
