--- a/FreeFlix/free-movie-streaming.html
+++ b/FreeFlix/free-movie-streaming.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <meta name="description" content="Watch 100% FREE movie streaming on FreeFlixx - the ultimate platform for unlimited free movies, TV shows and anime. No subscription, no signup, just instant streaming!">
+    <meta name="description" content="Watch 100% FREE movie streaming on FreeFlix - the ultimate platform for unlimited free movies, TV shows and anime. No subscription, no signup, just instant streaming!">
     <meta name="keywords" content="free movie streaming, watch movies free, free tv shows, no subscription streaming, free streaming sites, free movies online, free anime streaming">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-    <meta name="author" content="FreeFlixx">
+    <meta name="author" content="FreeFlix">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://freeflix.top/free-movie-streaming.html">
     <meta property="og:title" content="FREE Movie Streaming | Watch Movies & TV Shows Online Free">
-    <meta property="og:description" content="Stream thousands of movies and TV shows 100% free. No subscription fees, no signups, just unlimited free streaming at FreeFlixx.">
+    <meta property="og:description" content="Stream thousands of movies and TV shows 100% free. No subscription fees, no signups, just unlimited free streaming at FreeFlix.">
     <meta property="og:image" content="https://freeflix.top/assets/freeflixx.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://freeflix.top/free-movie-streaming.html">
     <meta property="twitter:title" content="FREE Movie Streaming | Watch Movies & TV Shows Online Free">
-    <meta property="twitter:description" content="Stream thousands of movies and TV shows 100% free. No subscription fees, no signups, just unlimited free streaming at FreeFlixx.">
+    <meta property="twitter:description" content="Stream thousands of movies and TV shows 100% free. No subscription fees, no signups, just unlimited free streaming at FreeFlix.">
     <meta property="twitter:image" content="https://freeflix.top/assets/freeflixx.png">
 
     <link rel="canonical" href="https://freeflix.top/free-movie-streaming.html">
     <link rel="icon" href="./assets/freeflixx.ico" type="image/x-icon">
     <link rel="stylesheet" href="./index.css?v=1.0.1">
-    <title>FREE Movie Streaming | Watch Movies & TV Shows Online | FreeFlixx</title>
+    <title>FREE Movie Streaming | Watch Movies & TV Shows Online | FreeFlix</title>
 
     <style>
         .hero-section {
@@ -298,18 +298,18 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <h1 class="hero-title">Free Movie Streaming - No Subscription Required</h1>
-        <p class="hero-subtitle">Welcome to FreeFlixx - the ultimate destination for free movie streaming online. Watch thousands of movies, TV shows, and anime completely free with no subscription, no signup, and no hidden fees.</p>
+        <p class="hero-subtitle">Welcome to FreeFlix - the ultimate destination for free movie streaming online. Watch thousands of movies, TV shows, and anime completely free with no subscription, no signup, and no hidden fees.</p>
         <a href="index.html" class="cta-button">Start Streaming Now</a>
     </section>
 
     <!-- Features Section -->
     <section class="features-section">
-        <h2 class="section-title">Why Choose FreeFlixx for Free Movie Streaming?</h2>
+        <h2 class="section-title">Why Choose FreeFlix for Free Movie Streaming?</h2>
         <div class="features-grid">
             <div class="feature-card">
                 <div class="feature-icon">🎬</div>
                 <h3 class="feature-title">100% Free Streaming</h3>
-                <p class="feature-description">Unlike other platforms that claim to be free but require credit cards or hidden payments, FreeFlixx is completely free with no strings attached.</p>
+                <p class="feature-description">Unlike other platforms that claim to be free but require credit cards or hidden payments, FreeFlix is completely free with no strings attached.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">📱</div>
@@ -379,24 +379,24 @@
     <section class="faq-section">
         <h2 class="section-title">Frequently Asked Questions</h2>
         <div class="faq-item">
-            <h3 class="faq-question">Is FreeFlixx really 100% free?</h3>
-            <p class="faq-answer">Yes! FreeFlixx is completely free to use. We don't require credit cards, subscriptions, or even account creation. You can start streaming immediately without any financial commitment.</p>
+            <h3 class="faq-question">Is FreeFlix really 100% free?</h3>
+            <p class="faq-answer">Yes! FreeFlix is completely free to use. We don't require credit cards, subscriptions, or even account creation. You can start streaming immediately without any financial commitment.</p>
         </div>
         <div class="faq-item">
-            <h3 class="faq-question">How can I watch movies on FreeFlixx?</h3>
+            <h3 class="faq-question">How can I watch movies on FreeFlix?</h3>
             <p class="faq-answer">Simply visit our website, browse through our library or use the search function to find what you want to watch, click on it, and start streaming right away. No downloads, installations, or signups required.</p>
         </div>
         <div class="faq-item">
-            <h3 class="faq-question">Does FreeFlixx have new releases?</h3>
+            <h3 class="faq-question">Does FreeFlix have new releases?</h3>
             <p class="faq-answer">Absolutely! We regularly update our library with the latest movies, TV shows, and anime. Our trending section features the newest and most popular content.</p>
         </div>
         <div class="faq-item">
-            <h3 class="faq-question">Can I use FreeFlixx on my mobile device?</h3>
-            <p class="faq-answer">Yes, FreeFlixx is fully responsive and works perfectly on all devices including smartphones, tablets, laptops, and desktop computers.</p>
+            <h3 class="faq-question">Can I use FreeFlix on my mobile device?</h3>
+            <p class="faq-answer">Yes, FreeFlix is fully responsive and works perfectly on all devices including smartphones, tablets, laptops, and desktop computers.</p>
         </div>
         <div class="faq-item">
-            <h3 class="faq-question">How does FreeFlixx compare to paid streaming services?</h3>
-            <p class="faq-answer">While paid services like Netflix, Disney+, and Hulu require monthly subscriptions, FreeFlixx offers a vast library of content completely free. We aggregate content from various sources to provide you with a premium streaming experience without the cost.</p>
+            <h3 class="faq-question">How does FreeFlix compare to paid streaming services?</h3>
+            <p class="faq-answer">While paid services like Netflix, Disney+, and Hulu require monthly subscriptions, FreeFlix offers a vast library of content completely free. We aggregate content from various sources to provide you with a premium streaming experience without the cost.</p>
         </div>
         <div class="faq-item">
             <h3 class="faq-question">Is there a limit to how much I can watch?</h3>
@@ -409,15 +409,15 @@
         <h2 class="section-title">What Our Users Say About Free Streaming</h2>
         <div class="testimonials-grid">
             <div class="testimonial-card">
-                <p class="testimonial-text">I can't believe I've been paying for streaming services all this time when FreeFlixx offers so much content for free! I've found all my favorite movies and shows here.</p>
+                <p class="testimonial-text">I can't believe I've been paying for streaming services all this time when FreeFlix offers so much content for free! I've found all my favorite movies and shows here.</p>
                 <p class="testimonial-author">- Michael T.</p>
             </div>
             <div class="testimonial-card">
-                <p class="testimonial-text">As a college student on a budget, FreeFlixx has been a lifesaver. I can watch all the latest movies and TV shows without spending a penny. The interface is super easy to use too!</p>
+                <p class="testimonial-text">As a college student on a budget, FreeFlix has been a lifesaver. I can watch all the latest movies and TV shows without spending a penny. The interface is super easy to use too!</p>
                 <p class="testimonial-author">- Sarah K.</p>
             </div>
             <div class="testimonial-card">
-                <p class="testimonial-text">The quality of streams on FreeFlixx is amazing considering it's completely free. I've recommended it to all my friends who were paying for multiple subscription services.</p>
+                <p class="testimonial-text">The quality of streams on FreeFlix is amazing considering it's completely free. I've recommended it to all my friends who were paying for multiple subscription services.</p>
                 <p class="testimonial-author">- David R.</p>
             </div>
         </div>
@@ -439,7 +439,7 @@
             <a href="anime/index.html" class="footer-link">Anime</a>
             <a href="sitemap.html" class="footer-link">Sitemap</a>
         </div>
-        <p class="copyright">&copy; 2025 FreeFlixx - The #1 Free Streaming Platform | All Rights Reserved</p>
+        <p class="copyright">&copy; 2025 FreeFlix - The #1 Free Streaming Platform | All Rights Reserved</p>
     </footer>
 
     <!-- Schema Markup for SEO -->
@@ -450,15 +450,15 @@
       "mainEntity": [
         {
           "@type": "Question",
-          "name": "Is FreeFlixx really 100% free?",
+          "name": "Is FreeFlix really 100% free?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes! FreeFlixx is completely free to use. We don't require credit cards, subscriptions, or even account creation. You can start streaming immediately without any financial commitment."
+            "text": "Yes! FreeFlix is completely free to use. We don't require credit cards, subscriptions, or even account creation. You can start streaming immediately without any financial commitment."
           }
         },
         {
           "@type": "Question",
-          "name": "How can I watch movies on FreeFlixx?",
+          "name": "How can I watch movies on FreeFlix?",
           "acceptedAnswer": {
             "@type": "Answer",
             "text": "Simply visit our website, browse through our library or use the search function to find what you want to watch, click on it, and start streaming right away. No downloads, installations, or signups required."
@@ -466,7 +466,7 @@
         },
         {
           "@type": "Question",
-          "name": "Does FreeFlixx have new releases?",
+          "name": "Does FreeFlix have new releases?",
           "acceptedAnswer": {
             "@type": "Answer",
             "text": "Absolutely! We regularly update our library with the latest movies, TV shows, and anime. Our trending section features the newest and most popular content."
@@ -474,18 +474,18 @@
         },
         {
           "@type": "Question",
-          "name": "Can I use FreeFlixx on my mobile device?",
+          "name": "Can I use FreeFlix on my mobile device?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes, FreeFlixx is fully responsive and works perfectly on all devices including smartphones, tablets, laptops, and desktop computers."
+            "text": "Yes, FreeFlix is fully responsive and works perfectly on all devices including smartphones, tablets, laptops, and desktop computers."
           }
         },
         {
           "@type": "Question",
-          "name": "How does FreeFlixx compare to paid streaming services?",
+          "name": "How does FreeFlix compare to paid streaming services?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "While paid services like Netflix, Disney+, and Hulu require monthly subscriptions, FreeFlixx offers a vast library of content completely free. We aggregate content from various sources to provide you with a premium streaming experience without the cost."
+            "text": "While paid services like Netflix, Disney+, and Hulu require monthly subscriptions, FreeFlix offers a vast library of content completely free. We aggregate content from various sources to provide you with a premium streaming experience without the cost."
           }
         },
         {
