--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -608,6 +608,7 @@
                 <a href="movies/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Movies</a>
                 <a href="tvshows/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">TV Shows</a>
                 <a href="anime/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Anime</a>
+                <a href="genres.html" style="color: #999; text-decoration: none; margin: 0 10px;">Genres</a>
                 <a href="free-movie-streaming.html" style="color: #999; text-decoration: none; margin: 0 10px;">Free Movie Streaming</a>
                 <a href="sitemap.html" style="color: #999; text-decoration: none; margin: 0 10px;">Sitemap</a>
             </div>
