--- a/FreeFlix/movies/index.html
+++ b/FreeFlix/movies/index.html
@@ -200,9 +200,26 @@
         </svg>
     </button>
 
+    <!-- SEO Footer Content -->
+    <footer style="background-color: rgba(0,0,0,0.8); padding: 20px; text-align: center; color: #666; font-size: 0.8rem; margin-top: 50px;">
+        <div class="seo-content">
+            <h2>FreeFlix Movies - Watch Free Movies Online</h2>
+            <p>Stream thousands of movies for free on FreeFlix. Our extensive library includes the latest blockbusters, classic films, and exclusive content in HD quality.</p>
+            <p>Browse by genre including action, comedy, horror, thriller, drama, romance, fantasy, mystery, and more - all without subscription fees or signup.</p>
+            <div class="footer-links">
+                <a href="../index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Home</a>
+                <a href="../movies/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Movies</a>
+                <a href="../tvshows/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">TV Shows</a>
+                <a href="../anime/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Anime</a>
+                <a href="../genres.html" style="color: #999; text-decoration: none; margin: 0 10px;">Genres</a>
+                <a href="../free-movie-streaming.html" style="color: #999; text-decoration: none; margin: 0 10px;">Free Movie Streaming</a>
+                <a href="../sitemap.html" style="color: #999; text-decoration: none; margin: 0 10px;">Sitemap</a>
+            </div>
+            <p>© 2025 FreeFlix - Free Movie Streaming Platform | All Rights Reserved</p>
+        </div>
+    </footer>
     <!-- Load script at the end for better performance -->
     <script src="../navigation-fix.js?v=1.0.1"></script>
     <script src="movies.js"></script>
 </body>
-
 </html>
