--- a/FreeFlix/tvshows/index.html
+++ b/FreeFlix/tvshows/index.html
@@ -204,10 +204,27 @@
         </svg>
     </button>
 
+    <!-- SEO Footer Content -->
+    <footer style="background-color: rgba(0,0,0,0.8); padding: 20px; text-align: center; color: #666; font-size: 0.8rem; margin-top: 50px;">
+        <div class="seo-content">
+            <h2>FreeFlix TV Shows - Watch Free TV Series Online</h2>
+            <p>Stream thousands of TV shows and series for free on FreeFlix. Our extensive library includes the latest episodes, complete seasons, and exclusive content in HD quality.</p>
+            <p>Browse by genre including drama, comedy, crime, action & adventure, mystery, fantasy, reality TV, sci-fi, and more - all without subscription fees or signup.</p>
+            <div class="footer-links">
+                <a href="../index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Home</a>
+                <a href="../movies/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Movies</a>
+                <a href="../tvshows/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">TV Shows</a>
+                <a href="../anime/index.html" style="color: #999; text-decoration: none; margin: 0 10px;">Anime</a>
+                <a href="../genres.html" style="color: #999; text-decoration: none; margin: 0 10px;">Genres</a>
+                <a href="../free-movie-streaming.html" style="color: #999; text-decoration: none; margin: 0 10px;">Free Movie Streaming</a>
+                <a href="../sitemap.html" style="color: #999; text-decoration: none; margin: 0 10px;">Sitemap</a>
+            </div>
+            <p>© 2025 FreeFlix - Free Movie Streaming Platform | All Rights Reserved</p>
+        </div>
+    </footer>
     <!-- Load script at the end for better performance -->
     <script src="../navigation-fix.js?v=1.0.1"></script>
     <script src="tvshows.js"></script>
     <script src="button-fix.js"></script>
 </body>
-
 </html>
