--- a/FreeFlix/sitemap.html
+++ b/FreeFlix/sitemap.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index, follow">
     <title>FreeFlix Sitemap - Complete Guide to Our Free Streaming Content</title>
     <link rel="stylesheet" href="./index.css?v=1.0.1">
-    <link rel="icon" href="./assets/freeflixx.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/freeflix.ico" type="image/x-icon">
     <link rel="canonical" href="https://freeflix.top/sitemap.html">
     <style>
         .sitemap-container {
@@ -63,7 +63,7 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <img src="assets/freeflixx.png" alt="FreeFlix logo" id="netflix-logo">
+        <img src="assets/freeflix.png" alt="FreeFlix logo" id="netflix-logo">
         <a href="index.html" class="back-btn">Back to Home</a>
     </header>
 
@@ -79,7 +79,7 @@
                 <a href="https://freeflix.top/movies/index.html">Movies</a>
                 <a href="https://freeflix.top/tvshows/index.html">TV Shows</a>
                 <a href="https://freeflix.top/anime/index.html">Anime</a>
-                <a href="https://freeflix.top/genres.html">Genres</a>
+
                 <a href="https://freeflix.top/watchList/watchlist.html">My Watchlist</a>
             </div>
         </section>
