--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -28,6 +28,30 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="FreeFlix">
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="FreeFlix - #1 Free Movie & TV Show Streaming Platform">
+    <meta name="twitter:description" content="Stream unlimited free movies and TV shows in HD quality with no subscription or signup required.">
+    <meta name="twitter:image" content="https://freeflix.top/assets/freeflix.png">
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://freeflix.top/">
+
+    <!-- Preconnect to External Domains -->
+    <link rel="preconnect" href="https://image.tmdb.org">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/freeflix.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/freeflix.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/freeflix.png">
+
+    <!-- SEO Enhancement Scripts -->
+    <script src="/schema-markup.js" defer></script>
+    <script src="/seo-metadata.js" defer></script>
+    <script src="/seo-performance.js" defer></script>
+
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://freeflix.top/">
