--- a/FreeFlix/genre/index.html
+++ b/FreeFlix/genre/index.html
@@ -73,11 +73,192 @@
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://freeflix.top/genre/">
-
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="../custom-buttons.css">
     <link rel="stylesheet" href="enhanced-style.css">
     <link rel="icon" href="../assets/freeflix.ico">
+    <style>
+        /* Mobile viewport scaling fix */
+        @media (max-width: 480px) {
+            html {
+                font-size: 14px;
+            }
+        }
+
+        /* Inline styles to override any conflicts */
+        .header {
+            padding: 0 15px 0 30px !important; /* Reduced right padding */
+            justify-content: space-between !important;
+            display: flex !important;
+            align-items: center !important;
+            width: 100% !important;
+            box-sizing: border-box !important;
+        }
+        .watch-list-button {
+            position: relative !important;
+            right: auto !important;
+            margin-left: auto !important;
+            margin-right: 10px !important; /* Further reduced right margin */
+            min-width: 120px !important;
+            flex-shrink: 0 !important; /* Prevent button from shrinking */
+        }
+        .genre-title {
+            text-align: center !important;
+            margin: 1rem auto 1.5rem !important;
+            left: 50% !important;
+            transform: translateX(-50%) !important;
+            display: inline-block !important;
+            width: auto !important;
+        }
+        .movie-title {
+            font-size: 0.8rem !important;
+            line-height: 1.2 !important;
+            max-width: 70% !important;
+        }
+        .movie-overlay {
+            border: none !important;
+            bottom: 0 !important; /* Ensure overlay is at the bottom */
+            top: auto !important; /* Remove any top positioning */
+            transform: translateY(0) !important; /* No transform */
+            padding: 30px 15px 10px !important; /* Increased top padding to push content further down */
+            justify-content: flex-end !important; /* Align content to bottom */
+            min-height: 100px !important; /* Increased height to push content down */
+        }
+        .movie-item:hover .movie-overlay {
+            background: linear-gradient(to top, rgba(141, 22, 201, 0.8) 0%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.2) 100%) !important;
+            /* Modified gradient to make purple highlight shorter */
+        }
+        .title-rating-container {
+            margin-top: 10px !important; /* Increased space above container */
+        }
+        .movie-item, .image-wrapper, .image-wrapper img {
+            border: none !important;
+        }
+        /* Remove watch-now-button styles since we're not using it anymore */
+
+        /* Responsive adjustments for watchlist button */
+        @media (max-width: 768px) {
+            .watch-list-button {
+                min-width: 100px !important;
+                margin-right: 5px !important; /* Further reduced margin */
+            }
+        }
+
+        @media (max-width: 480px) {
+            /* Responsive layout fixes for mobile */
+            html, body {
+                width: 100% !important;
+                max-width: 100% !important;
+                overflow-x: hidden !important;
+            }
+
+            .header {
+                width: 100% !important;
+                padding: 0 8px !important;
+                height: 50px !important; /* Increased height */
+            }
+
+            .watch-list-button {
+                min-width: 80px !important;
+                margin-right: 3px !important;
+                padding: 4px 8px !important;
+                height: 34px !important;
+                font-size: 12px !important;
+            }
+
+            /* Enhanced navigation styling */
+            .nav-menu {
+                padding: 8px 0 !important;
+                border-bottom: 2px solid rgba(141, 22, 201, 0.5) !important;
+                background-color: rgba(20, 20, 20, 0.98) !important;
+            }
+
+            .nav-items {
+                height: 40px !important;
+                padding: 0 10px !important;
+            }
+
+            .nav-item {
+                margin-right: 8px !important;
+            }
+
+            .nav-item a {
+                padding: 10px 15px !important;
+                font-size: 0.85rem !important;
+                font-weight: 500 !important;
+                border-radius: 20px !important;
+                border: 1px solid rgba(141, 22, 201, 0.3) !important;
+            }
+
+            .nav-item.active a {
+                background-color: rgba(141, 22, 201, 0.7) !important;
+                border: 1px solid rgba(141, 22, 201, 0.8) !important;
+                font-weight: 600 !important;
+            }
+
+            /* Enhanced genre title */
+            .genre-title {
+                font-size: 1.5rem !important;
+                margin: 1rem auto 1.2rem !important;
+                padding: 5px 15px !important;
+                border-radius: 30px !important;
+            }
+
+            /* Enhanced filter buttons */
+            .filter-options {
+                gap: 10px !important;
+                margin-bottom: 15px !important;
+            }
+
+            .filter-button {
+                padding: 8px 15px !important;
+                font-size: 0.85rem !important;
+                font-weight: 500 !important;
+                letter-spacing: 0.5px !important;
+                min-width: 80px !important;
+            }
+
+            /* Optimized grid for mobile - two columns */
+            .genre-grid-container {
+                grid-template-columns: repeat(2, 1fr) !important;
+                gap: 15px !important;
+                padding: 0 10px !important;
+                justify-content: space-between !important;
+                width: 100% !important;
+                box-sizing: border-box !important;
+                max-width: 100vw !important;
+            }
+
+            .movie-item {
+                margin: 0 auto !important;
+                max-width: 100% !important;
+                height: 150px !important;
+            }
+
+            /* Streamlined overlay for mobile */
+            .movie-overlay {
+                padding: 25px 10px 8px !important;
+                min-height: 85px !important;
+            }
+
+            .title-rating-container {
+                margin-bottom: 3px !important;
+                margin-top: 5px !important;
+            }
+
+            .movie-title {
+                font-size: 0.9rem !important;
+            }
+
+            .movie-rating {
+                font-size: 0.8rem !important;
+            }
+
+            .rating-star {
+                font-size: 0.9rem !important;
+            }
+        }
+    </style>
     <title>FreeFlix - Browse by Genre</title>
     <meta name="monetag" content="9d74356880b3ebb47a990a92b03643e2">
     <script data-cfasync="false" type="text/javascript" src="//madurird.com/tag.min.js" data-zone="9255615" async onerror="_gomung()" onload="_ogigoe()"></script>
