--- a/FreeFlix/download.html
+++ b/FreeFlix/download.html
@@ -188,7 +188,7 @@
 
             <div class="download-info">
                 Preparing your download. Loving what I do? You can support me by clicking the ADS.
-                Please wait while we process your request. The countdown will begin once everything is loaded.
+                Please wait while we process your request.
             </div>
             <button class="download-btn" id="download-btn">Continue to Download</button>
         </div>
