--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -22,7 +22,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://freeflix.top/">
-    <meta property="og:title" content="FreeFlix - #1 Free Movie & TV Show Streaming Platform | No Sign-up Needed">
+    <meta property="og:title" content="FreeFlix - #1 Free Streaming & Download Platform for Movies, TV Shows, and Anime">
     <meta property="og:description" content="Watch unlimited HD movies, TV shows, and anime completely free. Stream the latest releases without subscription fees or signup. Your favorite entertainment, just a click away.">
     <meta property="og:image" content="https://freeflix.top/assets/freeflix.png">
     <meta property="og:image:width" content="1200">
